Clean code (#31)
Signed-off-by: Thibault Meyer <meyer.thibault@gmail.com>